👟🌅 Updated with Glitch

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,18 +2,18 @@ doctype html
 html(lang="en-GB")
   head
     meta(charset='utf-8')
-    title= "pageTitleTK"
+    title= "ttl.glitch.me"
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='style.css')
   body
     header
-      h1 Title
+      h1 ttl.glitch.me
     main
       p
         form(action="/ontology")
-          label Ontology URL
+          label Turtle URL
           br
           input(type="text" name="url" placeholder="")
           button(type="submit")= 'Submit'
-      p Ontology linter
     footer
+      address robertbrook@fastmail.fm
