--- a/public/style.css
+++ b/public/style.css
@@ -5,8 +5,8 @@
 		}
 body {
   text-rendering: optimizeLegibility;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  padding:1% 3%;
+  font-family: system-ui; 
+  padding:1rem;
   margin:auto;
   max-width:42em;
   line-height:140%;
@@ -27,3 +27,4 @@ a#icon {
   color:crimson;
   text-decoration:none;
 }
+address { font-style: normal }
