--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ html(lang="en-GB")
     meta(charset='utf-8')
     title= "ttl.glitch.me"
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet' href='https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.css')
+    link(rel='stylesheet' href='https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.css')
   body
     header
       h1 ttl.glitch.me
