--- a/views/index.pug
+++ b/views/index.pug
@@ -15,4 +15,6 @@ html(lang="en-GB")
         input(type="text" name="url" placeholder="")
         button(type="submit")= 'Submit'
    
-    address robertbrook@fastmail.fm
+    address 
+      a(href='mailto:robertbrook@fastmail.fm')
+        robertbrook@fastmail.fm
