--- a/views/index.pug
+++ b/views/index.pug
@@ -16,5 +16,4 @@ html(lang="en-GB")
         button(type="submit")= 'Submit'
    
     address 
-      a(href='mailto:robertbrook@fastmail.fm')
-        robertbrook@fastmail.fm
+      a(href='mailto:robertbrook@fastmail.fm') "robertbrook@fastmail.fm"
