--- a/views/index.pug
+++ b/views/index.pug
@@ -12,5 +12,4 @@ html(lang="en-GB")
         label Turtle URL
         input(type="text" name="url" placeholder="")
         button(type="submit")= 'Submit'
-    address 
-      robertbrook@fastmail.fm
+    address robertbrook@fastmail.fm
