--- a/views/index.pug
+++ b/views/index.pug
@@ -13,6 +13,4 @@ html(lang="en-GB")
         label Turtle URL
         input(type="text" name="url" placeholder="")
         button(type="submit")= 'Submit'
-    footer
-      p
-        robertbrook@fastmail.fm
+    include footer.pug
