--- a/views/index.pug
+++ b/views/index.pug
@@ -11,6 +11,6 @@ html(lang="en-GB")
     main
       form(action="/ontology")
         label Turtle URL
-        input(type="text" name="url" placeholder="")
+        input(type="text" name="url" value="https://raw.githubusercontent.com/ukparliament/ontologies/master/treaty/treaty-ontology.ttl")
         button(type="submit")= 'Submit'
     include footer.pug
