--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ html(lang="en-GB")
     link(rel='stylesheet' href='https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.css')
   body
     header
-      h1 ttl.glitch.me
+      h1 &#12244; ttl.glitch.me
     main
       form(action="/ontology")
         label Turtle URL
