--- a/views/ontology.pug
+++ b/views/ontology.pug
@@ -33,14 +33,12 @@ html(lang="en-GB")
                 = gotOwlClassTarget.object.value
       
       section
-        aside
-          each gotQuad in gotQuads
-            pre
-              code= gotQuad.subject.value
-              br
-              code= gotQuad.predicate.value
-              br
-              code= gotQuad.object.value
+        pre
+          code
+            each gotQuad in gotQuads
+              = gotQuad.subject.value
+              = gotQuad.predicate.value
+              = gotQuad.object.value
 
     footer
           
