--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,7 @@ html(lang="en-GB")
     title= "ttl.glitch.me"
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet' href='https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.css')
+    script(src='https://cdn.jsdelivr.net/npm/lodash@4/lodash.min.js')
   body
     header
       h1 &#12244; ttl.glitch.me
