--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,4 @@
-doctype html
-html(lang="en-GB")
-  head
-    meta(charset='utf-8')
-    title= "ttl.glitch.me"
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet' href='https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.css')
-    script(src='https://cdn.jsdelivr.net/npm/lodash@4/lodash.min.js')
+include head.pug
   body
     header
       h1 &#12244; ttl.glitch.me
