--- a/views/ontology.pug
+++ b/views/ontology.pug
@@ -1,10 +1,4 @@
-doctype html
-html(lang="en-GB")
-  head
-    meta(charset='utf-8')
-    title Ontology
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet' href='https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.css')
+include head.pug
   body
     header
       
