🚋🕴 Updated with Glitch

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ body
   header
     h1 &#12244; ttl.glitch.me
   main
-    form(action="/ontology")
+    form(action="/render")
       label Turtle URL
       input(type="text" name="url" value="https://raw.githubusercontent.com/ukparliament/ontologies/master/treaty/treaty-ontology.ttl")
       button(type="submit")= 'Submit'
