--- a/views/head.pug
+++ b/views/head.pug
@@ -4,5 +4,6 @@ html(lang="en-GB")
     meta(charset='utf-8')
     title= "ttl.glitch.me"
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet' href='https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.css')
-    script(src='https://cdn.jsdelivr.net/npm/lodash@4/lodash.min.js')
+    link(rel='stylesheet' href='/style.css')
+    
+    
