--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,17 @@
-
-
 body {
   color:black;
   background-color:white;
   font-family:system-ui;
   padding:1rem;
-  max-width:38rem;
+  max-width:42rem;
   margin:auto;
 }
+
+header {background-color:beige;}
+
 main {
   background-color:beige;
+  padding:1rem;
 }
+
+footer {background-color:beige;}
