--- a/public/style.css
+++ b/public/style.css
@@ -9,9 +9,10 @@ body {
 
 header {background-color:beige;}
 
-main {
-  background-color:beige;
+main section {
+  background-color:#eee;
   padding:1rem;
+  margin:1rem 0;
 }
 
 footer {background-color:beige;}
