--- a/public/style.css
+++ b/public/style.css
@@ -1,29 +1,34 @@
 body {
-  color:#000;
-  background-color:#fff;
-  font-family:system-ui;
-  padding:1rem;
-  max-width:42rem;
-  margin:auto;
-  line-height:1.4rem;
+    color:black;
+    background-color:white;
+    font-family:sans-serif;
+    padding:1rem;
+    max-width:42rem;
+    margin:auto;
+    line-height:1.4rem;
 }
 
 header {background-color:white;}
 
 header a {text-decoration:none;}
 
+input#url {font-size: 1.4rem;
+    padding: 0.25rem;
+    font-weight: bold;
+    font-family: monospace;}
+
 h1 {color:crimson;}
 
 main section {
-  background-color:#eee;
-  padding:1rem;
-  margin:1rem 0;
+    background-color:#eee;
+    padding:1rem;
+    margin:1rem 0;
 }
 
 article {
-  border: thin dotted gray;
-  padding:1rem;
-  margin: 1rem 0;
+    border: thin dotted gray;
+    padding:1rem;
+    margin: 1rem 0;
 }
 
 footer {background-color:white;}
